--- a/src/views/files/list.ejs
+++ b/src/views/files/list.ejs
@@ -1,4 +1,7 @@
 <%- include('../partials/header', { title: 'Your Files' }) %>
+<%
+  const returnUrl = typeof from !== 'undefined' ? from : '/files';
+%>
 
 <h2 class="text-2xl font-semibold mb-4">Your Files</h2>
 
@@ -14,7 +17,7 @@
     <% files.forEach(file => { %>
       <li class="border p-4 rounded bg-white shadow flex justify-between">
         <span><%= file.name %> (<%= (file.size / 1024).toFixed(1) %> KB)</span>
-        <a href="/files/details/<%= file.id %>" class="text-blue-600 hover:underline">Details</a>
+        <a href="/files/details/<%= file.id %>?from=<%= folder ? ('/folders/' + folder.id) : '/files' %>" class="text-blue-600 hover:underline">Details</a>
       </li>
     <% }) %>
   <% } %>
